2/10/2023: Karl
 - Added the login pipeline.
 - Added debugging and appropriate launch.json config for that.


2/7/2023 : Karl
 - Added a simple CLI and logger to the server. There is now a separate thread for the CLI and the server runs in the background. The server can be stopped through the CLI. The CLI can also toggle logging and get a count of the active users.

2/4/2023 : Karl
 - More detailed comments.

2/3/2023 : Karl
- sqlc code generation
- queries related to register, generated code
- fleshed out store.go
- lots of tests for register and store
- enabled debugging in VSCode
- register pipeline
- usermanager
- controllers were created
- validate functions created and package util created
- altogether ~6 hours of work at least