@@ -10,6 +10,17 @@
 
 # Package communication
 
+
+2/10/2023
+
+- Added Token Struct 
+
+    - While dealing with logout, realized that we would not be able to use simple cookies with our responses. The reason is because of CORS security policies in the browser. If we allow CORS requests from anywhere, then we can't let our fetch requests pass cookies because it would be trivial for a 3rd party app to use stored cookies to access our users accounts. From MDN:
+    > Note: Access-Control-Allow-Origin is prohibited from using a wildcard for requests with credentials: 'include'. In such cases, the exact origin must be provided; even if you are using a CORS unblocker extension, the requests will still fail.
+    [See MDN Docs](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch)
+
+- Added LogoutResponse struct
+
 2/3/2023
 
 - added methods for, e.g., wrapping responses
@@ -24,6 +35,10 @@
 
 ## Server struct
 
+2/10/2023
+
+- changed server method postLogout to putLogout to reflect the HTTP method actually used
+
 1/28/2023
 
 - made http.Server a member, removed router member to httpServer member only (enables shutdown of server programatically)
@@ -32,6 +47,8 @@
 2/4/2023
 
 Ideas:
+
+- Candidate for refactor: Change controller.SetCookie to something more descriptive since it is no longer setting a cookie.
 
 - Candidate for refactor: Move server.ReadsAuth to UserManager.ReadsAuth
 - Candidate for refactor: Move server.EnsureController to UserManager.EnsureController
